@startuml

title __TEMPLATE's Class Diagram__\n

  namespace Template {
    abstract class Template.JazzInfoTemplate {
        + showInfo()
        {abstract} # display()
        {abstract} # processFile()
    }
  }
  

  namespace Template {
    class Template.JazzInfoTemplateFactory {
        {static} + createTemplate()
    }
  }
  

  namespace Template {
    class Template.LongInfo {
        # display()
        # processFile()
    }
  }
  

  namespace Template {
    class Template.MainTemplate {
        {static} + main()
    }
  }
  

  namespace Template {
    class Template.ShortInfo {
        # display()
        # processFile()
    }
  }
  

  Template.JazzInfoTemplate -up-|> Template.JazzInfoTemplateFactory
  Template.JazzInfoTemplateFactory -up-|> Template.MainTemplate
  Template.LongInfo -up-|> Template.JazzInfoTemplate
  Template.ShortInfo -up-|> Template.JazzInfoTemplate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
